Update doc api handle error
